# fyp

./: .gitignore  README.md  evaluate.py  gen_data.py  generate_solutions.py  pyproject.toml  run.sh  run_eval.py
data/questions/: corrupted_solutions_manual_easy_400.jsonl
evaluator/: Dockerfile  code_utils.py  main.py  requirements.txt
icl/: evaluate.py  generate_questions.py  generate_questions_default.py
icl/ui/: icl_viewer.html
icl/utils/: classification_functions.py  extract_utils.py  prompt_utils.py
icl_code/: evaluate.py  generate_examples.py  generate_solutions.py
icl_code/eval_judge/: evaluate_judges.py  generate_examples.py
icl_code/ui/: examples_viewer.html  judge_viewer.html
icl_code/utils/: __init__.py  constraints.py  extract_utils.py  prompt_utils.py  style_compliance.py
models/: __init__.py  anthropic.py  base.py  google.py  openai.py  openrouter.py  qwen.py
no_edits/: evaluate.py  generate_solutions.py  prompt_utils.py
no_edits/ui/: no_edits_viewer.html
partial_edits/: __init__.py  add_complexity_metrics.py  corrupt_data.py  corrupt_data_manual.py  evaluate.py  generate_solutions.py  recompute_similarity.py  run.sh
partial_edits/ui/: code_viewer.html
partial_edits/utils/: code_corruptor.py  code_utils.py  complexity_utils.py  extract_utils.py  prompts_utils.py  similarity_utils.py
train/: README.md  merge_lora.py
train/LiveCodeBench/lcb_runner/: lm_styles.py
train/LiveCodeBench/lcb_runner/prompts/: code_generation.py
train/LiveCodeBench/lcb_runner/runner/: parser.py
train/LiveCodeBench/lcb_runner/utils/: extraction_utils.py
train/configs/: config.yaml  infer.toml  orch.toml  train.toml
train/environments/deepcoder_minimal_edit/: README.md  create_dataset.py  create_synth_dataset.py  deepcoder_minimal_edit.py  pyproject.toml
train/environments/deepcoder_minimal_edit/deepcoder_utils/: async_deepcoder_genesys.py  async_taco.py  local_verify.py  sandbox_utils.py
train/environments/deepcoder_minimal_edit/deepcoder_utils/legacy/: deepcoder_genesys.py  taco.py  utils.py
train/environments/deepcoder_minimal_edit/partial_edits_utils/: code_corruptor.py  prompt_utils.py  similarity_utils.py
train/sft/: README.md  config.yaml  eval.sh  prepare_dataset.py  setup.sh
train/sft/scripts/: get_samples_from_base.py  inference.sh  prepare_dataset.py
