[project]
name = "fyp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chardet>=5.2.0",
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "faker>=37.3.0",
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-wtf>=1.2.2",
    "gensim>=4.3.3",
    "geopandas>=1.1.0",
    "keras>=3.10.0",
    "librosa>=0.11.0",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "openai>=1.82.1",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pycryptodome>=3.23.0",
    "pyquery>=2.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.1.2",
    "python-levenshtein>=0.27.1",
    "rsa>=4.9.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "soundfile>=0.13.1",
    "statsmodels>=0.14.4",
    "tensorflow>=2.18.1",
    "wordcloud>=1.9.4",
    "xlrd>=2.0.1",
    "xlwt>=1.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
