[project]
name = "deepcoder-minimal-edit"
description = "Your environment description here"
tags = ["placeholder-tag", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "prime>=0.3.26",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["deepcoder_minimal_edit.py"]
