[project]
name = "deepcoder-minimal-edit"
description = "Your environment description here"
tags = ["placeholder-tag", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "codebleu>=0.7.0",
    "datasets>=4.0.0",
    "prime>=0.3.26",
    "python-levenshtein>=0.27.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["deepcoder_minimal_edit.py"]
